[package]
name = "scuttle"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A multi-objective MaxSAT solver."
keywords = ["solver", "multi-objective", "maxsat"]
repository = "https://github.com/chrjabs/scuttle"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsat = { version = "0.4.3", path = "../rustsat/rustsat", features = ["multiopt", "internals"] }
rustsat-cadical = { optional = true, version = "0.2", path = "../rustsat/cadical", features = ["v1-7-2"] }
maxpre = { version = "0.2", path = "../maxpre-rs", optional = true, features = ["multiopt"] }
cpu-time = { optional = true, version = "1.0.0" }
clap = { optional = true, version = "4.4", features = ["derive", "cargo"] }
concolor-clap = { optional = true, version = "0.1.0" }
termcolor = { optional = true, version = "1.2.0" }
atty = { optional = true, version = "0.2.14" }
signal-hook = { optional = true, version = "0.3.15" }
scuttle-proc = { version = "0.1", path = "./proc" }

[build-dependencies]
rustsat-cadical = { version = "0.2", path = "../rustsat/cadical", features = ["v1-7-2"] }
maxpre = { version = "0.2", path = "../maxpre-rs", optional = true, features = ["multiopt"] }

[features]
default = ["binary-deps", "phasing", "sol-tightening", "interrupt-oracle", "limit-conflicts"]
interrupt-oracle = ["scuttle-proc/interrupt-oracle"]
phasing = ["scuttle-proc/phasing"]
sol-tightening = ["scuttle-proc/sol-tightening"]
coarse-convergence = []
limit-conflicts = ["scuttle-proc/limit-conflicts"]
check-non-dominance = []
binary-deps = [
  "dep:clap",
  "dep:concolor-clap",
  "dep:termcolor",
  "dep:atty",
  "dep:cpu-time",
  "dep:maxpre",
  "dep:signal-hook",
  "dep:rustsat-cadical",
  "rustsat/compression",
]
data-helpers = []
div-con = []

[profile.release]
lto = true

[[bin]]
name = "scuttle"
required-features = ["binary-deps"]
