[workspace]
members = ["core", "proc"]
exclude = ["rustsat", "maxpre-rs"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
clap = { version = "4.5.15", features = ["derive", "cargo"] }
cpu-time = "1.0.0"
concolor-clap = "0.1.0"
maxpre = { version = "0.2.2", path = "./maxpre-rs", features = ["multiopt"] }
pidgeons = { version = "0.1.0", path = "./rustsat/pidgeons" }
rustsat = { version = "0.5.0", path = "./rustsat", features = [
  "multiopt",
  "internals",
  "proof-logging",
] }
rustsat-cadical = { version = "0.3", path = "./rustsat/cadical", features = [
  "v2-0-0",
] }
signal-hook = "0.3.17"
scuttle-core = { version = "0.4.0", path = "./core" }
scuttle-proc = { version = "0.2", path = "./proc" }
termcolor = "1.4.1"
thiserror = "1.0.63"

[package]
name = "scuttle"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A multi-objective MaxSAT solver."
keywords = ["solver", "multi-objective", "maxsat"]
repository = "https://github.com/chrjabs/scuttle"
readme = "README.md"

[dependencies]
anyhow.workspace = true
atty.workspace = true
cpu-time.workspace = true
clap.workspace = true
concolor-clap.workspace = true
maxpre.workspace = true
pidgeons.workspace = true
rustsat.workspace = true
rustsat-cadical.workspace = true
scuttle-core = { workspace = true, features = ["clap"] }
signal-hook.workspace = true
termcolor.workspace = true
thiserror.workspace = true

[features]
coarse-convergence = ["scuttle-core/coarse-convergence"]
check-non-dominance = ["scuttle-core/check-non-dominance"]

[profile.release]
lto = true
