[workspace]
members = ["cadical-veripb-tracer", "core", "proc"]
exclude = ["rustsat", "maxpre-rs"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
cadical-veripb-tracer = { version = "0.1.0", path = "./cadical-veripb-tracer" }
cfg-if = "1.0.0"
clap = { version = "4.5.15", features = ["derive", "cargo"] }
cpu-time = "1.0.0"
concolor-clap = "0.1.0"
itertools = "0.13.0"
maxpre = { version = "0.2.2", path = "./maxpre-rs", features = ["multiopt"] }
pigeons = { version = "0.1.0", path = "./rustsat/pigeons" }
rustsat = { version = "0.6.3", path = "./rustsat", features = [
  "multiopt",
  "internals",
  "proof-logging",
] }
rustsat-cadical = { version = "0.4.3", path = "./rustsat/cadical", features = [
  "v2-1-1",
  "pigeons",
] }
signal-hook = "0.3.17"
scuttle-core = { version = "0.4.0", path = "./core" }
scuttle-proc = { version = "0.2", path = "./proc" }
tempfile = "3.12.0"
termcolor = "1.4.1"
thiserror = "1.0.63"

[package]
name = "scuttle"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A multi-objective MaxSAT solver."
keywords = ["solver", "multi-objective", "maxsat"]
repository = "https://github.com/chrjabs/scuttle"
readme = "README.md"

[dependencies]
anyhow.workspace = true
atty.workspace = true
cpu-time.workspace = true
clap.workspace = true
concolor-clap.workspace = true
maxpre.workspace = true
pigeons.workspace = true
rustsat.workspace = true
rustsat-cadical.workspace = true
scuttle-core = { workspace = true, features = ["clap"] }
signal-hook.workspace = true
termcolor.workspace = true
thiserror.workspace = true

[features]
sol-tightening = ["scuttle-core/sol-tightening"]

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = 1
