[package]
name = "scuttle-core"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
maxpre.workspace = true
pidgeons.workspace = true
rustsat.workspace = true
scuttle-proc.workspace = true
thiserror.workspace = true

[dev-dependencies]
rustsat-cadical.workspace = true

[features]
default = ["phasing", "sol-tightening", "interrupt-oracle", "limit-conflicts"]
interrupt-oracle = ["scuttle-proc/interrupt-oracle"]
phasing = ["scuttle-proc/phasing"]
sol-tightening = ["scuttle-proc/sol-tightening"]
coarse-convergence = []
limit-conflicts = ["scuttle-proc/limit-conflicts"]
check-non-dominance = []
clap = ["dep:clap"]
