[package]
name = "scuttle-core"
version = "0.4.0"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "Core library of the Scuttle MO-MaxSAT solver"
repository = "https://github.com/chrjabs/scuttle"

[dependencies]
anyhow.workspace = true
cadical-veripb-tracer.workspace = true
clap = { workspace = true, optional = true }
hitting-sets.workspace = true
itertools.workspace = true
maxpre = { workspace = true, optional = true }
pigeons.workspace = true
rustsat.workspace = true
rustsat-cadical.workspace = true
scuttle-proc.workspace = true
thiserror.workspace = true

[dev-dependencies]
libtest-mimic.workspace = true
tempfile.workspace = true

[features]
default = ["phasing", "interrupt-oracle", "limit-conflicts"]
interrupt-oracle = ["scuttle-proc/interrupt-oracle"]
phasing = ["scuttle-proc/phasing"]
sol-tightening = ["scuttle-proc/sol-tightening"]
coarse-convergence = []
limit-conflicts = ["scuttle-proc/limit-conflicts"]
check-non-dominance = []
verbose-proofs = ["cadical-veripb-tracer/verbose", "rustsat/verbose-proofs"]
clap = ["dep:clap"]
maxpre = ["dep:maxpre"]

[[test]]
name = "instances"
path = "tests/instances.rs"
harness = false
