[package]
name = "scuttle_derive"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "Procedural derive macros for scuttle"
keyworks = ["solver", "multi-objective optimization", "maxsat"]
repository = "https://github.com/chrjabs/scuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.20"

[features]
oracle-term = []
