[package]
name = "scuttle-proc"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "Procedural macros for scuttle. This crate is not intended to be used outside of scuttle."
keywords = ["solver", "multi-objective", "maxsat"]
repository = "https://github.com/chrjabs/scuttle"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.20"

[features]
interrupt-oracle = []
phasing = []
sol-tightening = []
limit-conflicts = []
